[workspace]
members = ["contracts/*"]
resolver = "2"

[profile.release.package.sg-dao]
codegen-units = 1
incremental = false

[profile.release.package.sg-nft-group]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
