[package]
name = "sg-gov"
authors = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Shane Vitarana <s@noreply.publicawesome.com>",
]
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = "1.1.5"
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw3 = "0.16.0"
cw3-fixed-multisig = { version = "0.16.0", features = ["library"] }
cw3-flex-multisig = { version = "0.16.0", features = ["library"] }
cw4 = "0.16.0"
cw4-group = { version = "0.16.0", features = ["library"] }
schemars = { workspace = true}
serde = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
cw-multi-test = "0.16.0"
cw4-group = "0.16.0"
cw721 = "0.16.0"
cw721-base = { version = "0.16.0", features = ["library"] }
# cw721-base = { git = "https://github.com/CosmWasm/cw-nfts", features = [
#   "library",
# ] }
