[package]
name = "sg-nft-group"
version = "0.1.0"
authors = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Shane Vitarana <s@noreply.publicawesome.com>",
]
edition = "2018"
description = "cw4 implementation of group membership backed by an NFT collection"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/daos"
homepage = "https://stargaze.zone"
documentation = "https://docs.stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.14.0"
cw2 = "0.14.0"
cw4 = "0.14.0"
cw-controllers = "0.14.0"
cw-storage-plus = "0.14.0"
cosmwasm-std = "1.0.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
cw721 = "0.13.4"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.14.0"
# cw721-base = { version = "0.13.4", features = ["library"] }
cw721-base = { git = "https://github.com/CosmWasm/cw-nfts", features = [
  "library",
] }
