[package]
name = "sg-nft-group"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Shane Vitarana <s@noreply.publicawesome.com>"]
description = "CW4 implementation of group based on staked NFTs"
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw4 = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
cw721-base = { version = "0.16.0", features = ["library"] }
cw-storage-plus = { workspace = true }
schemars = { workspace = true}
serde = { workspace = true }
sg-daos = { workspace = true }
thiserror = { workspace = true }
